k8s-manifests/application/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capstone-application
  namespace: capstone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capstone
  template:
    metadata:
      labels:
        app: capstone
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - image: dipayanp007/capstone:latest
        imagePullPolicy: IfNotPresent
        name: capstone-application
