k8s-manifests/application/service.yml
apiVersion: v1
kind: Service
metadata:
  name: capstone-application
  namespace: capstone
spec:
  type: NodePort
  ports:
    - name: traffic
      port: 8080
      targetPort: 8080
      nodePort: 30000
  selector:
      app: capstone
