k8s-manifests/application/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capstone-application
  namespace: capstone
spec:
  rules:
    - host: capstone.application.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capstone-application
                port:
                  number: 8080
